# rvpm

./: .gitignore  Makefile.am  README.md  TODO  config.h  configure.ac  libtool  rvpm.pc  rvpm.pc.in
doc/: rvpm.dxy
doc/html/: dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  formula.repository  group__kernels.html  group__morton.html  group__vpm.html  index.html  modules.html
examples/Collision/: collision
examples/Ring/: mkgrid.m  ring
examples/Validation/: log  ring  solution-100.ref  solution-25.ref  solution-50.ref  solution-75.ref
octave/: evalch.m  gfunc.m  gkernel-data.c  gkernel.c  mkkfit.m  vtyread.m
src/: Makefile.am  common.c  doxy.txt  gkernel.c  gkernel.lo  kernel.c  kernel.lo  librvpm.la  libsub.la  libsub_la-gkernel.lo  libsub_la-kernel.lo  libsub_la-rvpm.lo  libsub_la-solver.lo  libsub_la-specfunc.lo  libsub_la-streamfunc.lo  rvpm-private.h  rvpm.c  rvpm.h  rvpm.lo  solver.c  solver.lo  specfunc.c  specfunc.lo  streamfunc.c  streamfunc.lo  tree.c
src/.deps/: amc.Plo  assembly.Plo  common.Plo  gauss.Plo  gkernel.Plo  gll.Plo  gtrbf.Plo  kernel.Plo  lattice.Plo  libsub_la-gkernel.Plo  libsub_la-kernel.Plo  libsub_la-rvpm.Plo  libsub_la-solver.Plo  libsub_la-specfunc.Plo  libsub_la-streamfunc.Plo  libsub_la-tree.Plo  llt.Plo  morton.Plo  motion.Plo  naca.Plo  rpvm.Plo  rvpm.Plo  scripts.Plo  sections.Plo  solver.Plo  specfunc.Plo  streamfunc.Plo  tree.Plo  vorticity.Plo  wings.Plo
src/.libs/: librvpm-1.0.so.0  librvpm-1.0.so.0.0.0  librvpm.la  librvpm.lai
tests/: dfact.m  gfunc.m  gskernel.m  kcalc.m  kernel.m  procdat.m  vcalc.m
tools/: Makefile.am  make-source  make-source-float  rvpm-grid  rvpm-grid.c  rvpm-solve  rvpm-solve-float  rvpm-solve-float.c  rvpm-solve.c  rvpm-solve.c.in  rvpm-test  rvpm-test-float  rvpm-test-float.c  rvpm-test.c  rvpm-test.c.in  rvpm-util  rvpm-util.c
tools/.deps/: gll-test.Po  llt-polar.Po  llt-solve.Po  llt-test.Po  rpvm-test.Po  rvpm-grid.Po  rvpm-solve-float.Po  rvpm-solve.Po  rvpm-test-float.Po  rvpm-test.Po  rvpm-util.Po
